# anki

./: BRAINLIFT_AI_RATIONALE.md  BRAINLIFT_AI_SPEC.md  BRAINLIFT_EDITIONS.md  BRAINLIFT_MVP_SUMMARY.md  README.md  anki-brainlift-TESTING.md  removed_features.md
brainlift/: RUST_CHANGE_TopicMastery.md
brainlift_eval/: BASELINE_COMPARISON.md  BENCHMARKS.md  DATA_PROVENANCE.md  README.md  RESULTS.txt  _common.py  ablation.py  baseline.py  bench.py  checker.py  crash_test.py  demo_seed.py  fatigue_metrics.py  fatigue_model_eval.py  fatigue_sim.py  gold_eval.py  gold_set.py  leakage_check.py  memory_calibration_eval.py  memory_calibration_reliability.csv  memory_calibration_reliability.txt  paraphrase_gap.py  performance_holdout_eval.py  performance_holdout_results.csv  prompt_injection_check.py  run_all.py  run_eval.py  train_fatigue_model.py
docs/: BRAINLIFT.md  (+3 more)
pylib/: pyproject.toml
pylib/anki/: collection.py
pylib/anki/brainlift/: __init__.py  activity.py  ai.py  calibration.py  dashboard.py  default_content.py  diagnostic.py  exam_p.py  examp_seed.py  fatigue.py  measurements.py  onboarding.py  planner.py
pylib/tests/: test_brainlift_ablation.py  test_brainlift_bench.py  test_brainlift_calibration.py  test_brainlift_crash.py  test_brainlift_dashboard.py  test_brainlift_default_content.py  test_brainlift_diagnostic.py  test_brainlift_exam_p.py  test_brainlift_fatigue.py  test_brainlift_fatigue_offload.py  test_brainlift_leakage.py  test_brainlift_measurements.py  test_brainlift_onboarding.py  test_brainlift_persistence.py  test_brainlift_planner.py  test_brainlift_prompt_injection.py  test_brainlift_repair.py  test_brainlift_scoring_science.py  test_brainlift_sync_roundtrip.py  test_stats.py
(+14 files in other folders)
