[project]
name = "anki"
dynamic = ["version"]
description = "Python library for Anki, the spaced repetition flashcard program"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [
  { name = "Anki Team" },
]
urls."Bug Tracker" = "https://github.com/ankitects/anki/issues"
urls."Source Code" = "https://github.com/ankitects/anki"
urls."Anki Forum" = "https://forums.ankiweb.net/"
urls."Docs: Contributor Guide" = "https://dev-docs.ankiweb.net/en/latest/contributing.html"
urls."Docs: User Guide" = "https://docs.ankiweb.net/"
urls."Docs: Add-on Guide" = "https://addon-docs.ankiweb.net/"
urls.homepage = "https://apps.ankiweb.net/"

dependencies = [
  "decorator",
  "markdown",
  "orjson",
  "protobuf>=6.0,<8.0",
  "requests[socks]",
  # remove after we update to min python 3.11+
  "typing_extensions",
  # platform-specific dependencies
  "distro; sys_platform != 'darwin' and sys_platform != 'win32'",
]

# BrainLift optional AI extra. The default OpenAI client uses the REST API via
# `requests` (already a core dependency) so it mirrors the mobile OkHttp call and
# needs no extra install; installing `anki[ai]` additionally pulls the official
# `openai` SDK for anyone who prefers it. The key is read only from the
# OPENAI_API_KEY environment variable.
[project.optional-dependencies]
ai = ["openai>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anki"]

[tool.hatch.version]
source = "code"
path = "../python/version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
